# mcp-rust-schema

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_publish_crate.yml
src/: lib.rs  protocol.rs  types.rs
tests/: mcp_schema.json  schema_validation.rs
