[package]
name = "mcp_rust_schema"
version = "0.1.0"
edition = "2021"
description = "Rust Schema for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/infosechoudini/mcp-rust-schema"
documentation = "https://github.com/infosechoudini/mcp-rust-schema"
keywords = ["mcp", "schema", "protocol", "machine-learning", "ai"]
publish = true
exclude = [
    ".github/*",
    ".gitignore",
    "tests/*",
    ".env*",
    "*.swp",
    "*.swo",
    ".DS_Store",
    ".vscode/*",
    ".idea/*",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
bytes = "1.0"
url = "2.5"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1.4"
jsonschema = "0.28"

