[package]
name = "mcp_rust_schema"
version = "0.1.1"
edition = "2021"
description = "Rust Schema for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/infosechoudini/mcp-rust-schema"
documentation = "https://github.com/infosechoudini/mcp-rust-schema"
keywords = ["mcp", "schema", "protocol", "machine-learning", "ai"]
publish = true
exclude = [
    ".github/*",
    ".gitignore",
    "tests/*",
    ".env*",
    "*.swp",
    "*.swo",
    ".DS_Store",
    ".vscode/*",
    ".idea/*",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
jsonschema = "0.28"

